# test-proj-configs

./: .gitignore  README.md  build_type.py  git_utils.py  machine.py  project.py  pyproject.toml  test-proj-configs  test_proj_configs.py  tpc_utils.py  utils.py
.github/workflows/: test.yaml
cacts/: __init__.py  build_type.py  cacts.py  machine.py  parse_config.py  project.py  utils.py
cacts/tests/: test_build_type.py  test_cacts.py  test_deploy.sh  test_machine.py  test_project.py  test_utils.py
examples/: eamxx.yaml  example.yaml
test_proj_configs/: build_type.py  machine.py  project.py  test_proj_configs.py  utils.py
