[project]
name = "cacts"
version = "0.1"
description = "A framework for configurable unit testing of a cmake-based project"
requires-python = ">=3.6"
dependencies = ["pyyaml", "psutil"]
authors = [
  {name = "Luca Bertagna", email = "lbertag@sandia.gov"},
  {name = "Naser Mahfouz", email = "naser.mahfouzpnnl.gov"},
  {name = "James Foucar",  email = "jgfouca@sandia.gov"}
]
maintainers = [
  {name = "Luca Bertagna", email = "lbertag@sandia.gov"},
  {name = "James Foucar",  email = "jgfouca@sandia.gov"}
  {name = "Naser Mahfouz", email = "naser.mahfouzpnnl.gov"},
]
readme = "README.md"
keywords = ["testing", "cmake"]

[project.scripts]
cacts = "cacts.cacts:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
