[project]
name = "cacts"
description = "A framework for configurable unit testing of a cmake-based project"
authors = [
  {name = "Luca Bertagna", email = "lbertag@sandia.gov"},
  {name = "James Foucar",  email = "jgfouca@sandia.gov"},
  {name = "Naser Mahfouz", email = "naser.mahfouz@pnnl.gov"}
]
maintainers = [
  {name = "Luca Bertagna", email = "lbertag@sandia.gov"},
  {name = "James Foucar",  email = "jgfouca@sandia.gov"},
  {name = "Naser Mahfouz", email = "naser.mahfouz@pnnl.gov"}
]
requires-python = ">=3.6"
dependencies = [
    "pip>=21.3.1",
    "psutil",
    "pyyaml",
]

dynamic = ["version"]

[dependency-groups]
dev = [
    "pytest",
]

[project.scripts]
cacts = "cacts:main"

[tool.hatch.version]
path = "cacts/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
